# sbt-instrumentation

analyses/: CMakeLists.txt  globals_analysis_plugin.cpp  points_to_plugin.cpp
include/: instr_plugin.hpp  rewriter.hpp
instrumentations/memsafety/: config.json  memsafety.c
src/: instr.cpp  instr_analyzer.cpp  rewriter.cpp
